# vehicle-routing

./: .gitignore  21_4_1.vrp.sol  30_4_1.vrp.sol  41_14_1.vrp.sol  Cargo.toml  LICENSE  README.md  output.tmp  run.sh  vrp.sol
baselines/cplex/: timer_.py  vrp_instance.py
binaries/: baseline  clone-from  inline-dist  valid-w-cap
binary/: no-bounds-checks
results/: data.ipynb
results/sol/: 101_11_2.vrp.sol  101_8_1.vrp.sol  121_7_1.vrp.sol  135_7_1.vrp.sol  151_15_1.vrp.sol  16_5_1.vrp.sol  200_16_2.vrp.sol  21_4_1.vrp.sol  241_22_1.vrp.sol  262_25_1.vrp.sol  30_4_1.vrp.sol  386_47_1.vrp.or  386_47_1.vrp.sol  41_14_1.vrp.sol  45_4_1.vrp.sol  51_5_1.vrp.sol  76_8_2.vrp.sol
src/: common.rs  construct.rs  jump.rs  main.rs  solver.rs  swap.rs  vrp_instance.rs
src/cplex/: main.py  solver_.py  vrp.sol
src/ortools/: main.py
src/rust/: .gitignore  101_11_2.vrp.sol  101_8_1.vrp.sol  121_7_1.vrp.sol  135_7_1.vrp.sol  151_15_1.vrp.sol  16_5_1.vrp.sol  200_16_2.vrp.sol  21_4_1.vrp.sol  241_22_1.vrp.sol  262_25_1.vrp.sol  30_4_1.vrp.sol  386_47_1.vrp.sol  41_14_1.vrp.sol  45_4_1.vrp.sol  51_5_1.vrp.sol  5_4_10.vrp.sol  76_8_2.vrp.sol  Cargo.toml  clone-from  no-shuffle  out.txt  rust-toolchain.toml
src/rust/src/: check_sol.rs  common.rs  construct.rs  explode.rs  jump.rs  main.rs  old_solver.rs  solver.rs  swap.rs  vrp_instance.rs
src/rust/src/solvers/: adaptive.rs  mod.rs  multineighbor.rs  neighbor.rs  old_solver.rs
src/solvers/: adaptive.rs  mod.rs  multineighbor.rs  neighbor.rs
