[package]
name = "vrp"
version = "0.1.0"
edition = "2024"

[dependencies]
num_cpus = "1.16.0"
ordered-float = "5.0.0"
rand = "0.9.1"
rand_distr = "0.5.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

# [profile.release]
# lto = "fat"

[profile.profiling]
inherits = "release"
debug = true
